--- a/src/App.css
+++ b/src/App.css
@@ -60,14 +60,14 @@
 
 .task-edit-div {
   display: flex;
-  justify-content: space-between;
-  width: 100%;
+  justify-content: space-evenly;
   align-items: center;
 }
 
 .input-container input {
+  outline: none;
   height: 30px;
-  width: 450px;
+  width: 460px;
   border: none;
 }
 
@@ -77,7 +77,7 @@
   color: white;
   height: 30px;
   width: 70px;
-  margin-right: 41px;
+  margin-right: 5px;
 }
 
 
@@ -126,6 +126,10 @@
 
 .hidden-thing {
   display: none;
+}
+
+.error-message {
+  color: red;
 }
 
 .toggle-btns {
